// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`replaceUnstableOutput() > replace date 1`] = `
"Start at  <date>
<date>"
`;

exports[`replaceUnstableOutput() > replace full datetime (YYYY-MM-DD HH:MM:SS) 1`] = `
"Installed: <date>
  Created: <date>
  Updated: <date>"
`;

exports[`replaceUnstableOutput() > replace hash values 1`] = `
"npm notice shasum: <hash>
npm notice integrity: sha512-<hash>
"shasum": "<hash>",
"integrity": "sha512-<hash>","
`;

exports[`replaceUnstableOutput() > replace ignore npm audited packages log 1`] = `
"removed 1 package in <variable>ms
up to date in <variable>ms
added 1 package in <variable>ms
added 3 packages in <variable>ms
Done in <variable>ms"
`;

exports[`replaceUnstableOutput() > replace ignore npm notice access token expired or revoked warning log 1`] = `
"line 1
line 2
line 3"
`;

exports[`replaceUnstableOutput() > replace ignore npm registry domain 1`] = `
"https://registry.<domain>/testnpm2
https://registry.<domain>/debug
https://registry.<domain>/testnpm2/-/testnpm2-1.0.0.tgz
"resolved": "https://registry.<domain>/testnpm2/-/testnpm2-1.0.0.tgz",
"resolved": "https://registry.<domain>/testnpm2/-/testnpm2-1.0.0.tgz","
`;

exports[`replaceUnstableOutput() > replace ignore npm warn exec The following package was not found and will be installed: cowsay@<semver> warning log 1`] = `"hello world"`;

exports[`replaceUnstableOutput() > replace ignore pnpm request warning log 1`] = `
"Foo bar
Packages:"
`;

exports[`replaceUnstableOutput() > replace ignore tarball download average speed warning log 1`] = `
"WARN  Tarball download average speed 29 KiB/s (size 56 KiB) is below 50 KiB/s: https://registry.<domain>/qs/-/qs-6.14.0.tgz (GET)
 WARN  Tarball download average speed 34 KiB/s (size 347 KiB) is below 50 KiB/s: https://registry.<domain>/undici/-/undici-7.16.0.tgz (GET)"
`;

exports[`replaceUnstableOutput() > replace pnpm progress plus markers with <repeat> 1`] = `
"Scope: all <variable> workspace projects
Packages: +<variable>
+<repeat>
Progress: resolved <variable>, reused <variable>, downloaded <variable>, added <variable>, done"
`;

exports[`replaceUnstableOutput() > replace pnpm registry request error warning log 1`] = `"Progress: resolved"`;

exports[`replaceUnstableOutput() > replace tsdown output 1`] = `
"ℹ tsdown v<semver> powered by rolldown v<semver>
ℹ entry: src/index.ts
ℹ Build start
ℹ dist/index.js  <variable> kB │ gzip: <variable> kB
ℹ 1 files, total: <variable> kB
✔ Build complete in <variable>ms"
`;

exports[`replaceUnstableOutput() > replace unstable cwd 1`] = `"<cwd>/foo.txt"`;

exports[`replaceUnstableOutput() > replace unstable pnpm install output 1`] = `
"Scope: all <variable> workspace projects
Packages: +<variable>
+<repeat>
Progress: resolved <variable>, reused <variable>, downloaded <variable>, added <variable>, done

devDependencies:
+ vite-plus <semver>
+ vitest <semver>"
`;

exports[`replaceUnstableOutput() > replace unstable pnpm install output 2`] = `
"Scope: all <variable> workspace projects
Lockfile is up to date, resolution step is skipped
Already up to date

╭ Warning ───────────────────────────────────────────────────────────────────────────────────╮
│                                                                                            │
│   Ignored build scripts: esbuild.                                                          │
│   Run "pnpm approve-builds" to pick which dependencies should be allowed to run scripts.   │
│                                                                                            │
╰────────────────────────────────────────────────────────────────────────────────────────────╯

Done in <variable>ms using pnpm v<semver>"
`;

exports[`replaceUnstableOutput() > replace unstable semver version 1`] = `
"foo v<semver>
 v<semver>
 v<semver>
 <semver>
 <semver>
 <semver>
tsdown/<semver>
vitest/<semver>
foo/v<semver>
foo@<semver>
bar@v<semver>"
`;

exports[`replaceUnstableOutput() > replace unstable tmpdir with realpath 1`] = `
"<cwd>/foo.txt
<cwd>/../other/bar.txt"
`;

exports[`replaceUnstableOutput() > replace unstable vite-plus hash version 1`] = `
""vite-plus": "^0.0.0-<hash>"
"vite-plus-core": "^0.0.0-<hash>""
`;

exports[`replaceUnstableOutput() > replace vite-plus home paths 1`] = `
"<vite-plus-home>/js_runtime/node/v<semver>/bin/node
<vite-plus-home>/packages/cowsay/lib/node_modules/cowsay/./cli.js
<vite-plus-home>
<vite-plus-home>/bin"
`;

exports[`replaceUnstableOutput() > replace yarn YN0000: └ Completed with duration to empty string 1`] = `
"➤ YN0000: └ Completed
➤ YN0000: └ Completed
➤ YN0000: └ Completed"
`;

exports[`replaceUnstableOutput() > replace yarn YN0013 1`] = `
"➤ YN0000: ┌ Fetch step
➤ YN0000: └ Completed"
`;
